@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006 Roy Marples <uberlord@gentoo.org>
+ * Copyright 2006-2007 Roy Marples <uberlord@gentoo.org>
  * although a lot was lifted from udhcp
  * 
  * dhcpcd is an RFC2131 compliant DHCP client daemon.
